--- a/ads/build.gradle
+++ b/ads/build.gradle
@@ -16,7 +16,12 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
+    publishing {
+        singleVariant("release") {
+            withSourcesJar()
+            withJavadocJar()
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -37,4 +42,21 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    //ads
+    implementation 'com.google.android.gms:play-services-ads:22.6.0'
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
+    implementation 'com.google.android.gms:play-services-basement:18.2.0'
+}
+publishing {
+    publications {
+        release(MavenPublication) {
+            groupId = 'com.github.toanmt'
+            artifactId = 'amazic-ad-lib'
+            version = '0.0.1'
+
+            afterEvaluate {
+                from components.release
+            }
+        }
+    }
 }
